# knapsack

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  knapsack.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree  knapsack.doctree
_modules/: index.html  knapsack.html
_modules/knapsack/: knapsack.html
doc/: conf.py
doc/_build/: .buildinfo  genindex.html  index.html  knapsack.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/.doctrees/: environment.pickle  knapsack.doctree
doc/_build/_modules/: index.html  knapsack.html
doc/_build/_sources/: index.rst.txt
docs/: conf.py
src/: knapsack.py
src/knapsack/: __init__.py  knapsack.py
test/: ps-a.py  ps-b.py  test_knapsack.py  test_knapsack_a.py  test_knapsack_b.py
