[metadata]
name = knapsack
version = 0.0.1
author = easai
description = An implementation of Knapsack problem solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/easai/knapsack
license_files = LICENSE
license = GNU
project_urls =
    Bug Tracker = https://github.com/easai/knapsack/issues
classifiers =
    Programming Language :: Python :: 3.10.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
